--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,20 @@
   
   <dependencies>
   
-  	<!-- JUnit -->
+  	<!-- JUnit/Mockto -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-      <scope>test</scope>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.1</version>
+        <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-all</artifactId>
+	    <version>2.0.0-beta</version>
+	    <scope>test</scope>
+	</dependency>
+    
     
     <!-- Spring Dependencies -->
 	<dependency>
