--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ankur</groupId>
-  <artifactId>ut8-smh-ann</artifactId>
+  <artifactId>spring-mvc-hibernate</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>Spring MVC Hibernate Demo</name>
@@ -151,7 +151,7 @@
   </dependencies>
   
   	<build>
-		<finalName>ut8-smh-ann</finalName>
+		<finalName>spring-mvc-hibernate</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
